--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,14 @@
     color: white;
 }
 
+.mymenu{
+    box-sizing: border-box;
+    font-family: "Lato", sans-serif;
+    padding: 0;
+    margin: 0;
+    color: black;
+}
+
 .column {
     float: left;
     text-align: center;
